@@ -10,6 +10,9 @@ install:
 test:
 	python2.6 -m tests.test_rpqueue
 	python2.7 -m tests.test_rpqueue
+	python3.3 -m tests.test_rpqueue
+	python3.4 -m tests.test_rpqueue
+	python3.5 -m tests.test_rpqueue
 
 upload:
 	python setup.py sdist upload
